@@ -1,3 +1,11 @@
+2000-01-25  Dominique Dumont  <domi@ispserv.grenoble.hp.com> v1.016
+
+	* TreeGraph.pm: 
+	- fix redrawing bugs
+	- removed setting of -scrollregion
+	- added small explanations related to scrolling
+	- added a dash to pack parameter (needed for Tk800.017)
+
 1999-08-12  Dominique Dumont  <domi@barrayar.grenoble.hp.com> v1.015
 
 	* TreeGraph.pm (addAllShortcuts): 
